--- a/source/index.html
+++ b/source/index.html
@@ -37,13 +37,13 @@
           <h3 class="program-item__title">Похудение</h3>
             <p class="program-item__desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a href="#" class="prgram-item__link">Каталог Slim</a>
+            <a href="#" class="program-item__link">Каталог Slim</a>
         </li>
         <li class="programs__list-item program-item">
           <h3 class="program-item__title">Набор массы</h3>
             <p class="program-item__desc">Заработать авторитет среди дворовых котов и даже собак?
               Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a href="#" class="prgram-item__link">Каталог pro</a>
+            <a href="#" class="program-item__link">Каталог pro</a>
         </li>
       </ul>
 
