--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -45,7 +46,7 @@
               <td class="properties__value">700 Р.</td>
             </tr>
           </table>
-          <a href="#" class="item-card__order button">Заказать</a>
+          <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
@@ -66,7 +67,7 @@
               <td class="properties__value">1000 Р.</td>
             </tr>
           </table>
-          <a href="#" class="item-card__order button">Заказать</a>
+          <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
@@ -86,7 +87,7 @@
               <td class="properties__value">700 Р.</td>
             </tr>
           </table>
-          <a href="#" class="item-card__order button">Заказать</a>
+          <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
@@ -106,7 +107,7 @@
               <td class="properties__value">1000 Р.</td>
             </tr>
           </table>
-          <a href="#" class="item-card__order button">Заказать</a>
+          <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
@@ -126,7 +127,7 @@
               <td class="properties__value">400 Р.</td>
             </tr>
           </table>
-          <a href="#" class="item-card__order button">Заказать</a>
+          <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
@@ -146,7 +147,7 @@
               <td class="properties__value">700 Р.</td>
             </tr>
           </table>
-          <a href="#" class="item-card__order button">Заказать</a>
+          <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
@@ -166,13 +167,13 @@
               <td class="properties__value">500 Р.</td>
             </tr>
           </table>
-          <a href="#" class="item-card__order button">Заказать</a>
+          <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
       </ul>
       <div class="show-all">
         <b class="show-all__headline">Показать еще 100500 товаров</b>
         <p class="show-all__desc">На самом деле вкусов гораздо больше!</p>
-        <a href="#" class="show-all__link button">Показать все</a>
+        <a href="#" class="show-all__link button button--grey">Показать все</a>
       </div>
     </section>
 
