--- a/source/index.html
+++ b/source/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
   <header class="page-header">
     <a class="page-header__logo">
-      <img src="http://placehold.it/191x39" width="191" height="39" alt="Кэт энерджи" class="page-header__logo-image">
+      <img src="img/logo-mobile.svg" width="191" height="39" alt="Кэт энерджи" class="page-header__logo-image">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -30,7 +31,7 @@
         <h1 class="programs__headline">Функциональное питание для котов</h1>
         <p class="programs__slogan">Занялся собой? Займись котом!</p>
       </header>
-      <a href="#" class="programs__choose button">Подобрать программу</a>
+      <a href="#" class="programs__choose button button--green">Подобрать программу</a>
       <h2 class="visually-hidden">Программы питания</h2>
       <ul class="programs__list">
         <li class="programs__list-item program-item">
@@ -66,7 +67,7 @@
 
   </main>
   <footer class="page-footer">
-    <a href="#" class="page-footer__logo"><img src="http://placehold.it/128x24" width="128" height="24" alt="Кэт энерджи"></a>
+    <a href="#" class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
     <ul class="page-footer__social social">
       <li class="social__item"><a href="vk.com" class="social__link social__link--vkontakte">Мы в Вконтакте</a></li>
       <li class="social__item"><a href="instagram.com" class="social__link social__link--instagram">Мы в Инстаграм</a></li>
@@ -74,7 +75,7 @@
     </ul>
     <div class="page-footer__copyrigth copyright">
       <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
-      <img src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy" class="copyright__logo">
+      <img src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy" class="copyright__logo">
       </a>
 
 
