Добавляет верстку с препроцессором

--- a/source/index.html
+++ b/source/index.html
@@ -18,8 +18,8 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active"><a>Главная</a></li>
-          <li class="site-list__item"><a href="#">Каталог продукции</a></li>
-          <li class="site-list__item"><a href="#">Подбор программы</a></li>
+          <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
+          <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
         </ul>
       </div>
     </nav>
@@ -67,7 +67,7 @@
 
   </main>
   <footer class="page-footer">
-    <a href="#" class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
+    <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
     <ul class="page-footer__social social">
       <li class="social__item"><a href="vk.com" class="social__link social__link--vkontakte">Мы в Вконтакте</a></li>
       <li class="social__item"><a href="instagram.com" class="social__link social__link--instagram">Мы в Инстаграм</a></li>
