--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,15 +11,15 @@
 
   <header class="page-header">
     <a href="index.html" class="page-header__logo">
-      <img src="http://placehold.it/191x39" width="191" height="39" alt="Кэт энерджи" class="page-header__logo-image">
+      <img src="img/logo-mobile.svg" width="191" height="39" alt="Кэт энерджи" class="page-header__logo-image">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active"><a>Главная</a></li>
-          <li class="site-list__item"><a href="#">Каталог продукции</a></li>
-          <li class="site-list__item"><a href="#">Подбор программы</a></li>
+          <li class="site-list__item site-list__item--active"><a href="index.html">Главная</a></li>
+          <li class="site-list__item"><a>Каталог продукции</a></li>
+          <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
         </ul>
       </div>
     </nav>
@@ -29,7 +29,7 @@
       <h1 class="catalog__headline">Каталог продукции</h1>
       <ul class="catalog__list">
         <li class="catalog__item item-card">
-          <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
+          <img src="../img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
           PRO 500 г" class="item-card__image">
           <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
           <table class="item-card__properties properties">
@@ -49,7 +49,7 @@
           <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
+          <img src="../img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
           PRO 1000 г" class="item-card__image">
           <h3 class="item-card__headline">Cat Energy
             PRO 1000 г</h3>
@@ -70,7 +70,7 @@
           <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
+          <img src="../img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
               PRO 500 г" class="item-card__image">
           <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
           <table class="item-card__properties properties">
@@ -90,7 +90,7 @@
           <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
+          <img src="../img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                 PRO 1000 г" class="item-card__image">
           <h3 class="item-card__headline">Cat Energy PRO 1000 г</h3>
           <table class="item-card__properties properties">
@@ -110,7 +110,7 @@
           <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
+          <img src="../img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                   SLIM 500 г" class="item-card__image">
           <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
           <table class="item-card__properties properties">
@@ -130,7 +130,7 @@
           <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
+          <img src="../img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                     SLIM 1000 г" class="item-card__image">
           <h3 class="item-card__headline">Cat Energy SLIM 1000 г</h3>
           <table class="item-card__properties properties">
@@ -150,7 +150,7 @@
           <a href="#" class="item-card__order button button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy
+          <img src="../img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                       SLIM 500 г" class="item-card__image">
           <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
           <table class="item-card__properties properties">
@@ -171,7 +171,7 @@
         </li>
       </ul>
       <div class="show-all">
-        <b class="show-all__headline">Показать еще 100500 товаров</b>
+        <p class="show-all__headline">Показать еще 100500 товаров</p>
         <p class="show-all__desc">На самом деле вкусов гораздо больше!</p>
         <a href="#" class="show-all__link button button--grey">Показать все</a>
       </div>
@@ -182,8 +182,7 @@
 
   </main>
   <footer class="page-footer">
-    <a href="#" class="page-footer__logo"><img src="http://placehold.it/128x24" width="128" height="24"
-        alt="Кэт энерджи"></a>
+    <a href="index.html" class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
     <ul class="page-footer__social social">
       <li class="social__item"><a href="vk.com" class="social__link social__link--vkontakte">Мы в Вконтакте</a></li>
       <li class="social__item"><a href="instagram.com" class="social__link social__link--instagram">Мы в Инстаграм</a>
@@ -192,7 +191,7 @@
     </ul>
     <div class="page-footer__copyrigth copyright">
       <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
-        <img src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy" class="copyright__logo">
+        <img src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy" class="copyright__logo">
       </a>
 
 
