--- a/source/form.html
+++ b/source/form.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
   <header class="page-header">
     <a href="index.html" class="page-header__logo">
-      <img src="http://placehold.it/191x39" width="191" height="39" alt="Кэт энерджи" class="page-header__logo-image">
+      <img src="img/logo-mobile.svg" width="191" height="39" alt="Кэт энерджи" class="page-header__logo-image">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active"><a>Главная</a></li>
-          <li class="site-list__item"><a href="#">Каталог продукции</a></li>
-          <li class="site-list__item"><a href="#">Подбор программы</a></li>
+          <li class="site-list__item site-list__item--active"><a href="index.html">Главная</a></li>
+          <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
+          <li class="site-list__item"><a>Подбор программы</a></li>
         </ul>
       </div>
     </nav>
@@ -29,7 +30,7 @@
 
   </main>
   <footer class="page-footer">
-    <a href="#" class="page-footer__logo"><img src="http://placehold.it/128x24" width="128" height="24" alt="Кэт энерджи"></a>
+    <a href="index.html" class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
     <ul class="page-footer__social social">
       <li class="social__item"><a href="vk.com" class="social__link social__link--vkontakte">Мы в Вконтакте</a></li>
       <li class="social__item"><a href="instagram.com" class="social__link social__link--instagram">Мы в Инстаграм</a></li>
@@ -37,7 +38,7 @@
     </ul>
     <div class="page-footer__copyrigth copyright">
       <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
-      <img src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy" class="copyright__logo">
+        <img src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy" class="copyright__logo">
       </a>
 
 
