--- a/source/index.html
+++ b/source/index.html
@@ -9,85 +9,97 @@
 
 <body>
 
-<header class="page-header">
-  <a class="page-header__logo">
-    <img src="img/logo-desktop.svg" srcset="img/logo-mobile.svg 768w, img/logo-tablet.svg 1200w, img/logo-desktop.svg 4000w" width="191" height="39" alt="Кэт энерджи" class="page-header__logo-image">
-  </a>
-  <nav class="main-nav">
-    <label class="main-nav__label"><input class="main-nav__toggle visually-hidden" type="button">
-  </label>
-
-    <div class="main-nav__wrapper">
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active"><a>Главная</a></li>
-        <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
-        <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
-      </ul>
-    </div>
-  </nav>
-</header>
-<main class="page-main">
-
-  <section class="programs">
-    <header class="programs__header">
-      <h1 class="programs__headline">Функциональное питание для котов</h1>
-      <p class="programs__slogan">Занялся собой? Займись котом!</p>
-    </header>
-    <a href="#" class="programs__choose button button--green">Подобрать программу</a>
-    <h2 class="visually-hidden">Программы питания</h2>
-    <ul class="programs__list">
-      <li class="programs__list-item program-item">
-        <h3 class="program-item__title">Похудение</h3>
-        <p class="program-item__desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-          Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a href="#" class="program-item__link">Каталог Slim</a>
-      </li>
-      <li class="programs__list-item program-item">
-        <h3 class="program-item__title">Набор массы</h3>
-        <p class="program-item__desc">Заработать авторитет среди дворовых котов и даже собак?
-          Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-        <a href="#" class="program-item__link">Каталог pro</a>
-      </li>
-    </ul>
-
-  </section>
-
-  <section class="features">
-    <h2 class="features__headline">Как это работает</h2>
-    <ul class="features__list feature">
-      <li class="feature__item feature__item--useful">Функциональное питание содержит только полезные питательные
-        вещества.
-      </li>
-      <li class="feature__item feature__item--simple">Выпускается в виде порошка, который нужно лишь залить кипятком и
-        готово.
-      </li>
-      <li class="feature__item feature__item--easy">Замените один-два приема обычной еды на наше функциональное
-        питание.
-      </li>
-      <li class="feature__item feature__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему вашего
-        питомца!
-      </li>
-
-    </ul>
-  </section>
-
-</main>
-<footer class="page-footer">
-  <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
-  <ul class="page-footer__social social">
-    <li class="social__item"><a href="vk.com" class="social__link social__link--vkontakte">Мы в Вконтакте</a></li>
-    <li class="social__item"><a href="instagram.com" class="social__link social__link--instagram">Мы в Инстаграм</a>
-    </li>
-    <li class="social__item"><a href="facebook.com" class="social__link social__link--facebook">Мы в Фейсбуке</a></li>
-  </ul>
-  <div class="page-footer__copyrigth copyright">
-    <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
-      <img src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy" class="copyright__logo">
+  <header class="page-header">
+    <a class="page-header__logo">
+      <img src="img/logo-desktop.svg"
+        srcset="img/logo-mobile.svg 768w, img/logo-tablet.svg 1200w, img/logo-desktop.svg 4000w" width="191" height="39"
+        alt="Кэт энерджи" class="page-header__logo-image">
     </a>
+    <nav class="main-nav">
+      <label class="main-nav__label"><input class="main-nav__toggle visually-hidden" type="button">
+      </label>
+
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active"><a>Главная</a></li>
+          <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
+          <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="page-main">
+
+    <section class="programs">
+      <header class="programs__header">
+        <div class="programs__wrapper">
+
+          <h1 class="programs__headline">Функциональное питание для котов</h1>
+          <p class="programs__slogan">Занялся собой? Займись котом!</p>
+
+          <a href="#" class="programs__choose button button--green">Подобрать программу</a>
+        </div>
+        <div class="programs__image-container">
+          <img src="img/index-can-mobile@1x.png" alt="" class="programs__can">
+        </div>
 
 
-  </div>
-</footer>
+      </header>
+
+      <h2 class="visually-hidden">Программы питания</h2>
+      <ul class="programs__list">
+        <li class="programs__list-item program-item">
+          <h3 class="program-item__title">Похудение</h3>
+          <p class="program-item__desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a href="#" class="program-item__link">Каталог Slim</a>
+        </li>
+        <li class="programs__list-item program-item">
+          <h3 class="program-item__title">Набор массы</h3>
+          <p class="program-item__desc">Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a href="#" class="program-item__link">Каталог pro</a>
+        </li>
+      </ul>
+
+    </section>
+
+    <section class="features">
+      <h2 class="features__headline">Как это работает</h2>
+      <ul class="features__list feature">
+        <li class="feature__item feature__item--useful">Функциональное питание содержит только полезные питательные
+          вещества.
+        </li>
+        <li class="feature__item feature__item--simple">Выпускается в виде порошка, который нужно лишь залить кипятком и
+          готово.
+        </li>
+        <li class="feature__item feature__item--easy">Замените один-два приема обычной еды на наше функциональное
+          питание.
+        </li>
+        <li class="feature__item feature__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему вашего
+          питомца!
+        </li>
+
+      </ul>
+    </section>
+
+  </main>
+  <footer class="page-footer">
+    <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
+    <ul class="page-footer__social social">
+      <li class="social__item"><a href="vk.com" class="social__link social__link--vkontakte">Мы в Вконтакте</a></li>
+      <li class="social__item"><a href="instagram.com" class="social__link social__link--instagram">Мы в Инстаграм</a>
+      </li>
+      <li class="social__item"><a href="facebook.com" class="social__link social__link--facebook">Мы в Фейсбуке</a></li>
+    </ul>
+    <div class="page-footer__copyrigth copyright">
+      <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
+        <img src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy" class="copyright__logo">
+      </a>
+
+
+    </div>
+  </footer>
 
 
 </body>
