--- a/source/index.html
+++ b/source/index.html
@@ -49,13 +49,13 @@
       <h2 class="visually-hidden">Программы питания</h2>
       <ul class="programs__list">
         <li class="programs__list-item program-item">
-          <h3 class="program-item__title">Похудение</h3>
+          <h3 class="program-item__title program-item__title--slim">Похудение</h3>
           <p class="program-item__desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a href="#" class="program-item__link">Каталог Slim</a>
         </li>
-        <li class="programs__list-item program-item">
-          <h3 class="program-item__title">Набор массы</h3>
+        <li class="programs__list-item program-item ">
+          <h3 class="program-item__title program-item__title--pro">Набор массы</h3>
           <p class="program-item__desc">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a href="#" class="program-item__link">Каталог pro</a>
@@ -67,18 +67,18 @@
     <section class="features">
       <h2 class="features__headline">Как это работает</h2>
       <ul class="features__list feature">
-        <li class="feature__item feature__item--useful">Функциональное питание содержит только полезные питательные
-          вещества.
-        </li>
-        <li class="feature__item feature__item--simple">Выпускается в виде порошка, который нужно лишь залить кипятком и
-          готово.
-        </li>
-        <li class="feature__item feature__item--easy">Замените один-два приема обычной еды на наше функциональное
-          питание.
-        </li>
-        <li class="feature__item feature__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему вашего
-          питомца!
-        </li>
+        <li class="feature__item feature__item--useful"><span class="feature__desc">Функциональное питание содержит
+            только полезные питательные вещества.
+          </span></li>
+        <li class="feature__item feature__item--simple"><span class="feature__desc">Выпускается в виде порошка, который
+            нужно лишь залить кипятком и готово.
+          </span></li>
+        <li class="feature__item feature__item--easy"><span class="feature__desc">Замените один-два приема обычной еды
+            на наше функциональное питание.
+          </span></li>
+        <li class="feature__item feature__item--fast"><span class="feature__desc">Уже через месяц наслаждайтесь
+            изменениями к лучшему вашего питомца!
+          </span></li>
 
       </ul>
     </section>
