--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="main-page">
 
   <header class="page-header">
     <a class="page-header__logo">
