--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,7 +21,7 @@
 
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item "><a  href="index.html">Главная</a></li>
+          <li class="site-list__item "><a href="index.html">Главная</a></li>
           <li class="site-list__item site-list__item--active"><a>Каталог продукции</a></li>
           <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
         </ul>
@@ -35,150 +35,169 @@
         <li class="catalog__item item-card">
           <img src="../img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
           PRO 500 г" class="item-card__image">
-          <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
-          <table class="item-card__properties properties">
-            <tr>
-              <td class="properties__field">Объем</td>
-              <td class="properties__value">500 г</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Вкус</td>
-              <td class="properties__value">Курица</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Цена</td>
-              <td class="properties__value">700 Р.</td>
-            </tr>
-          </table>
-          <a href="#" class="item-card__order button button--green">Заказать</a>
+          <div class="item-card__wrapper">
+            <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
+            <table class="item-card__properties properties">
+              <tr>
+                <td class="properties__field">Объем</td>
+                <td class="properties__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Вкус</td>
+                <td class="properties__value">Курица</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Цена</td>
+                <td class="properties__value">700 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="../img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
           PRO 1000 г" class="item-card__image">
-          <h3 class="item-card__headline">Cat Energy
-            PRO 1000 г</h3>
-          <table class="item-card__properties properties">
-            <tr>
-              <td class="properties__field">Объем</td>
-              <td class="properties__value">1000 г</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Вкус</td>
-              <td class="properties__value">Курица</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Цена</td>
-              <td class="properties__value">1000 Р.</td>
-            </tr>
-          </table>
-          <a href="#" class="item-card__order button button--green">Заказать</a>
+          <div class="item-card__wrapper">
+            <h3 class="item-card__headline">Cat Energy PRO 1000 г</h3>
+
+            <table class="item-card__properties properties">
+              <tr>
+                <td class="properties__field">Объем</td>
+                <td class="properties__value">1000 г</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Вкус</td>
+                <td class="properties__value">Курица</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Цена</td>
+                <td class="properties__value">1000 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="../img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
               PRO 500 г" class="item-card__image">
-          <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
-          <table class="item-card__properties properties">
-            <tr>
-              <td class="properties__field">Объем</td>
-              <td class="properties__value">500 г</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Вкус</td>
-              <td class="properties__value">Рыба</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Цена</td>
-              <td class="properties__value">700 Р.</td>
-            </tr>
-          </table>
-          <a href="#" class="item-card__order button button--green">Заказать</a>
+          <div class="item-card__wrapper">
+            <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
+            <table class="item-card__properties properties">
+              <tr>
+                <td class="properties__field">Объем</td>
+                <td class="properties__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Вкус</td>
+                <td class="properties__value">Рыба</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Цена</td>
+                <td class="properties__value">700 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="../img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                 PRO 1000 г" class="item-card__image">
-          <h3 class="item-card__headline">Cat Energy PRO 1000 г</h3>
-          <table class="item-card__properties properties">
-            <tr>
-              <td class="properties__field">Объем</td>
-              <td class="properties__value">500 г</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Вкус</td>
-              <td class="properties__value">Рыба</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Цена</td>
-              <td class="properties__value">1000 Р.</td>
-            </tr>
-          </table>
-          <a href="#" class="item-card__order button button--green">Заказать</a>
+          <div class="item-card__wrapper">
+            <h3 class="item-card__headline">Cat Energy PRO 1000 г</h3>
+            <table class="item-card__properties properties">
+              <tr>
+                <td class="properties__field">Объем</td>
+                <td class="properties__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Вкус</td>
+                <td class="properties__value">Рыба</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Цена</td>
+                <td class="properties__value">1000 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="../img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                   SLIM 500 г" class="item-card__image">
-          <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
-          <table class="item-card__properties properties">
-            <tr>
-              <td class="properties__field">Объем</td>
-              <td class="properties__value">500 г</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Вкус</td>
-              <td class="properties__value">Гречка</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Цена</td>
-              <td class="properties__value">400 Р.</td>
-            </tr>
-          </table>
-          <a href="#" class="item-card__order button button--green">Заказать</a>
+          <div class="item-card__wrapper">
+            <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
+            <table class="item-card__properties properties">
+              <tr>
+                <td class="properties__field">Объем</td>
+                <td class="properties__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Вкус</td>
+                <td class="properties__value">Гречка</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Цена</td>
+                <td class="properties__value">400 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="../img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                     SLIM 1000 г" class="item-card__image">
-          <h3 class="item-card__headline">Cat Energy SLIM 1000 г</h3>
-          <table class="item-card__properties properties">
-            <tr>
-              <td class="properties__field">Объем</td>
-              <td class="properties__value">1000 г</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Вкус</td>
-              <td class="properties__value">Гречка</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Цена</td>
-              <td class="properties__value">700 Р.</td>
-            </tr>
-          </table>
-          <a href="#" class="item-card__order button button--green">Заказать</a>
+          <div class="item-card__wrapper">
+            <h3 class="item-card__headline">Cat Energy SLIM 1000 г</h3>
+            <table class="item-card__properties properties">
+              <tr>
+                <td class="properties__field">Объем</td>
+                <td class="properties__value">1000 г</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Вкус</td>
+                <td class="properties__value">Гречка</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Цена</td>
+                <td class="properties__value">700 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
           <img src="../img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                       SLIM 500 г" class="item-card__image">
-          <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
-          <table class="item-card__properties properties">
-            <tr>
-              <td class="properties__field">Объем</td>
-              <td class="properties__value">500 г</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Вкус</td>
-              <td class="properties__value">Рис</td>
-            </tr>
-            <tr>
-              <td class="properties__field">Цена</td>
-              <td class="properties__value">500 Р.</td>
-            </tr>
-          </table>
-          <a href="#" class="item-card__order button button--green">Заказать</a>
+          <div class="item-card__wrapper">
+            <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
+            <table class="item-card__properties properties">
+              <tr>
+                <td class="properties__field">Объем</td>
+                <td class="properties__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Вкус</td>
+                <td class="properties__value">Рис</td>
+              </tr>
+              <tr>
+                <td class="properties__field">Цена</td>
+                <td class="properties__value">500 Р.</td>
+              </tr>
+            </table>
+          </div>
+          <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
+
+        <li class="show-all item-card">
+
+
+          <h3 class="item-card__headline">Показать еще 100500 товаров</h3>
+          <p class="show-all__desc">На самом деле вкусов гораздо больше!</p>
+          <a href="#" class="button item-card__order button--grey">Показать все</a>
+        </li>
+
       </ul>
-      <div class="show-all">
-        <p class="show-all__headline">Показать еще 100500 товаров</p>
-        <p class="show-all__desc">На самом деле вкусов гораздо больше!</p>
-        <a href="#" class="show-all__link button button--grey">Показать все</a>
-      </div>
+
     </section>
 
 
@@ -186,7 +205,8 @@
 
   </main>
   <footer class="page-footer">
-    <a href="index.html" class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
+    <a href="index.html" class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24"
+        alt="Кэт энерджи"></a>
     <ul class="page-footer__social social">
       <li class="social__item"><a href="vk.com" class="social__link social__link--vk">
           <svg width="22" height="12" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -244,7 +264,7 @@ s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z" />
       <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60">
         <path
           d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
-        </svg>
+      </svg>
 
 
 
