--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
   <header class="page-header">
     <a class="page-header__logo">
 
-      <picture >
+      <picture>
         <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" alt="Кэт энерджи">
@@ -122,7 +122,7 @@
       <h2 class="contacts__headline">Приглашаем к сотрудничеству дилеров</h2>
       <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       <a href="map.html" class="contacts__map-link">
-        <img src="img/bg-map-mobile@1x.png" alt="Мы на карте" class="contacts__map-image">
+        <img src="img/bg-map-mobile@1x.png" alt="Мы на карте" class="contacts__map-image" width="320" height="400">
       </a>
     </section>
 
@@ -184,7 +184,7 @@ s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z" />
 
       </a>
 
-      <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="50" viewBox="0 0 60 60">
         <path
           d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
       </svg>
