Добавляет минификацию HTML

--- a/source/index.html
+++ b/source/index.html
@@ -168,7 +168,7 @@
       <ul class="page-footer__social social">
         <li class="social__item"><a href="vk.com" class="social__link social__link--vk">
             <svg width="22" height="12">
-              <use xlink:href="#vk"></use>
+              <use xlink:href="#icon-vk"></use>
             </svg>
             <span class="visually-hidden">Мы в Вконтакте</span>
           </a>
@@ -176,7 +176,7 @@
         <li class="social__item">
           <a href="instagram.com" class="social__link social__link--insta">
             <svg width="17" height="17">
-              <use xlink:href="#insta"></use>
+              <use xlink:href="#icon-insta"></use>
             </svg>
             <span class="visually-hidden">Мы в Инстаграм</span>
           </a>
@@ -184,7 +184,7 @@
         <li class="social__item">
           <a href="facebook.com" class="social__link social__link--facebook">
             <svg width="10" height="19">
-              <use xlink:href="#facebook"></use>
+              <use xlink:href="#icon-fb"></use>
             </svg>
             <span class="visually-hidden">Мы в Фейсбуке</span>
           </a>
