Ускоряет загрузку шрифтов

--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="Description" content="Кэт энерджи-магазин функционального питания для котов">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="css/style.min.css"  as="style">
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+
 
 
 </head>
