Добавляет главную планшетную

--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,11 @@
   <meta name="Description" content="Кэт энерджи-магазин функционального питания для котов">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
-  <link rel="preload" href="css/style.min.css"  as="style">
+  <link rel="preload" href="css/style.min.css" as="style">
   <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+
+
+
 
 
 
@@ -86,13 +89,13 @@
           <h3 class="program-item__title program-item__title--slim">Похудение</h3>
           <p class="program-item__desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a href="#" class="program-item__link">Каталог Slim</a>
+          <a href="catalog.html#slim" class="program-item__link">Каталог Slim</a>
         </li>
-        <li class="programs__list-item program-item ">
+        <li class="programs__list-item program-item">
           <h3 class="program-item__title program-item__title--pro">Набор массы</h3>
           <p class="program-item__desc">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a href="#" class="program-item__link">Каталог pro</a>
+          <a href="catalog.html#pro" class="program-item__link">Каталог pro</a>
         </li>
       </ul>
 
@@ -118,25 +121,83 @@
     </section>
 
     <section class="case">
-      <h2 class="case__headline">Живой пример</h2>
-      <p class="case__desc">
-        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-        изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-      </p>
-      <table class="case__table data-table">
-        <tr>
-          <td>снижение веса</td>
-          <td>5 кг</td>
-        </tr>
-        <tr>
-          <td>затрачено времени</td>
-          <td>60 дней</td>
-        </tr>
-        <tr>
-          <td>Затраты на питание: </td>
-          <td>15 000 руб.</td>
-        </tr>
-      </table>
+      <div class="case__headline-wrapper">
+        <h2 class="case__headline">Живой пример</h2>
+      </div>
+
+      <div class="case__wrapper">
+
+        <div class="case__container">
+          <p class="case__desc">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+            изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <table class="case__table data-table">
+
+            <tbody>
+
+              <tr class="data-table__item">
+                <td class="data-table__field">снижение веса</td>
+                <td class="data-table__value">5 кг</td>
+              </tr>
+              <tr class="data-table__item">
+                <td class="data-table__field">затрачено времени</td>
+                <td class="data-table__value">60 дней</td>
+              </tr>
+
+              <tr class="data-table__item-cost">
+                <td class="data-table__field-cost">Затраты на питание: </td>
+                <td class="data-table__value-cost">15 000 руб.</td>
+              </tr>
+            </tbody>
+
+          </table>
+        </div>
+        <div class="case__slider slider">
+
+          <input type="radio" id="btn-1" name="toggle" checked>
+          <input type="radio" id="btn-2" name="toggle">
+          <div class="slider__inner">
+            <div class="slider__slides">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/before-desktop@1x.webp 1x, img/before-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/before-tablet@1x.webp 1x, img/before-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/before-mobile@1x.webp 1x, img/before-mobile@2x.webp 2x">
+
+                <source media="(min-width: 1200px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/before-tablet@1x.jpg 1x, img/before-tablet@2x.jpg 2x">
+                <img class="slider__foto-before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x"
+                  alt="Кэт энерджи">
+              </picture>
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/after-desktop@1x.webp 1x, img/after-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/after-tablet@1x.webp 1x, img/after-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/after-mobile@1x.webp 1x, img/after-mobile@2x.webp 2x">
+
+                <source media="(min-width: 1200px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/after-tablet@1x.jpg 1x, img/after-tablet@2x.jpg 2x">
+                <img class="slider__foto-after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x"
+                  alt="Кэт энерджи">
+              </picture>
+            </div>
+          </div>
+          <div class="slider__controls">
+            <label for="btn-1">Было</label>
+            <div class="slider__scale">
+              <div class="slider__scale-point"></div>
+            </div>
+            <label for="btn-2">Стало</label>
+          </div>
+        </div>
+
+
+
+
+      </div>
     </section>
 
     <section class="contacts">
@@ -146,20 +207,10 @@
             class="contacts__address-city">Санкт-Петербург</span>
         </p>
       </div>
-      <a href="map.html" class="contacts__map-link">
-        <picture>
 
-          <source type="image/webp" media="(min-width: 1200px)"
-            srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)"
-            srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
+      <a href="map.html" class="contacts__map-link  contacts__map-image">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
 
-          <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
-          <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
-            alt="Мы на карте">
-        </picture>
 
       </a>
     </section>
