--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,7 +44,8 @@
       <h1 class="catalog__headline">Каталог продукции</h1>
 
       <ul class="catalog__list">
-        <li class="catalog__item item-card">
+
+        <li class="catalog__item item-card" id="pro">
 
 
           <picture>
@@ -197,7 +198,7 @@
           </div>
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
-        <li class="catalog__item item-card">
+        <li class="catalog__item item-card" id="slim">
 
           <picture>
 
@@ -361,52 +362,54 @@
       </a>
     </section>
   </main>
+
   <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
-        <ul class="page-footer__social social">
-          <li class="social__item"><a href="vk.com" class="social__link social__link--vk">
-              <svg width="22" height="12">
-                <use xlink:href="#icon-vk"></use>
-              </svg>
-              <span class="visually-hidden">Мы в Вконтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="instagram.com" class="social__link social__link--insta">
-              <svg width="17" height="17">
-                <use xlink:href="#icon-insta"></use>
-              </svg>
-              <span class="visually-hidden">Мы в Инстаграм</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="facebook.com" class="social__link social__link--facebook">
-              <svg width="10" height="19">
-                <use xlink:href="#icon-fb"></use>
-              </svg>
-              <span class="visually-hidden">Мы в Фейсбуке</span>
-            </a>
-          </li>
-        </ul>
-        <div class="page-footer__copyright copyright">
-          <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
-
+    <div class="page-footer__wrapper">
+      <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
+      <ul class="page-footer__social social">
+        <li class="social__item"><a href="vk.com" class="social__link social__link--vk">
+            <svg width="22" height="12">
+              <use xlink:href="#icon-vk"></use>
+            </svg>
+            <span class="visually-hidden">Мы в Вконтакте</span>
           </a>
+        </li>
+        <li class="social__item">
+          <a href="instagram.com" class="social__link social__link--insta">
+            <svg width="17" height="17">
+              <use xlink:href="#icon-insta"></use>
+            </svg>
+            <span class="visually-hidden">Мы в Инстаграм</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="facebook.com" class="social__link social__link--facebook">
+            <svg width="10" height="19">
+              <use xlink:href="#icon-fb"></use>
+            </svg>
+            <span class="visually-hidden">Мы в Фейсбуке</span>
+          </a>
+        </li>
+      </ul>
+      <div class="page-footer__copyright copyright">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
 
-          <svg width="27" height="34" viewBox="10 4 40 50">
-            <path fill="#2E368F"
-              d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z">
-            </path>
+        </a>
 
-          </svg>
+        <svg width="27" height="34" viewBox="10 4 40 50">
+          <path fill="#2E368F"
+            d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z">
+          </path>
+
+        </svg>
 
 
 
 
-        </div>
       </div>
-    </footer>
+    </div>
+  </footer>
+
 
   <script src="js/app.js"></script>
 </body>
