--- a/source/index.html
+++ b/source/index.html
@@ -11,35 +11,22 @@
   <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
 
 
-
-
-
-
 </head>
 
 <body class="main-page">
-
   <div style="display: none">
     <include src="build/img/sprite.svg"></include>
   </div>
-
   <header class="page-header">
     <a class="page-header__logo">
-
       <picture>
-
         <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" alt="Кэт энерджи">
       </picture>
     </a>
-
     <nav class="main-nav main-nav--opened main-nav--nojs">
-
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-
-
-
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active"><a>Главная</a></li>
@@ -50,19 +37,15 @@
     </nav>
   </header>
   <main class="page-main">
-
     <section class="programs">
       <header class="programs__header">
         <div class="programs__wrapper">
-
           <h1 class="programs__headline">Функциональное питание для котов</h1>
           <p class="programs__slogan">Занялся собой? Займись котом!</p>
-
           <a href="form.html" class="programs__choose button button--green">Подобрать программу</a>
         </div>
         <div class="programs__image-container">
           <picture>
-
             <source type="image/webp" media="(min-width: 1200px)"
               srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
@@ -76,12 +59,7 @@
               alt="Кэт энерджи">
           </picture>
         </div>
-
-
       </header>
-
-
-
 
       <h2 class="visually-hidden">Программы питания</h2>
       <ul class="programs__list">
@@ -209,7 +187,9 @@
       </div>
 
       <a href="map.html" class="contacts__map-link  contacts__map-image">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor"
+          width="100%" height="400" frameborder="0"></iframe>
 
 
       </a>
