--- a/source/form.html
+++ b/source/form.html
@@ -43,6 +43,131 @@
   <main class="page-main">
 
 
+    <!-- Форма -->
+
+
+
+    <section class="form">
+      <h1 class="form__headline">Подбор программы</h1>
+      <p class="form__desc">
+        Заполните анкету и мы подберем программу питания для вашего кота
+      </p>
+      <form action="https://echo.htmlacademy.ru" method="post" class="form__main">
+        <div class="form__wrapper">
+          <fieldset class="form__cat-data">
+
+            <div class="form__row">
+              <label for="cat-name" class="form__field-label">Имя:*</label>
+              <input type="text" id="cat-name" name="cat-name" placeholder="Барсик" required>
+            </div>
+
+            <div class="form__row">
+              <label for="cat-weight" class="form__field-label">Вес (кг):*</label>
+              <input type="text" id="cat-weight" name="cat-weight" placeholder="7" required>
+            </div>
+            <div class="form__row">
+              <label for="cat-age" class="form__field-label">Возраст (лет):</label>
+              <input type="text" id="cat-age" name="cat-age" placeholder="7">
+
+            </div>
+          </fieldset>
+          <!-- радиокнопки выбора программы-->
+          <fieldset class="form__program-choise">
+            <ul class="form__programs-list">
+              <li class="form__programs-item">
+                <input type="radio" id="slim" name="program-choise" value="slim" checked>
+                <label for="slim" class="form__field-label">Похудение</label>
+              </li>
+
+              <li class="form__programs-item">
+                <input type="radio" id="pro" name="program-choise" value="pro">
+                <label for="pro" class="form__field-label">Набор массы</label>
+              </li>
+
+              <li class="form__programs-item">
+                <input type="radio" id="unknown" name="program-choise" value="unknown">
+                <label for="unknown" class="form__field-label">Не знаю (Нужен ваш совет)</label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
+        <!-- Контактные данные (владельца кота) -->
+        <fieldset class="form__cat-owner-data">
+          <legend class="form__fieldset-headline">Контактные данные (владельца кота)</legend>
+          <ul class="form__owner-data-list">
+            <li class="form__row">
+              <label for="cat-owner-email" class="form__field-label">E-mail:*</label>
+              <input type="email" id="cat-owner-email" name="cat-owner-email" class="cat-owner-email"
+                placeholder="kuklachev@gmail.com" required>
+              <svg width="18" height="14">
+                <use xlink:href="#icon-mail"></use>
+              </svg>
+            </li>
+
+            <li class="form__row">
+              <label for="cat-owner-phone" class="form__field-label">Телефон:*</label>
+              <input type="phone" id="cat-owner-phone" name="cat-owner-phone" placeholder="8 (960) 900-60-90" required>
+              <svg width="21" height="21">
+                <use xlink:href="#icon-phone"></use>
+              </svg>
+            </li>
+          </ul>
+        </fieldset>
+
+        <!-- Комментарий -->
+        <fieldset class="form__comment">
+          <legend class="form__fieldset-headline">Комментарий</legend>
+          <label class="form__fieldset-headline"></label>
+
+          <textarea name="comment">Расскажите обо всех повадках кота</textarea>
+
+
+
+        </fieldset>
+
+
+        <!-- Дополнительно -->
+
+        <fieldset class="form__addition">
+          <legend class="form__fieldset-headline">Дополнительно</legend>
+          <ul class="form__addition-list">
+
+            <li class="form__addition-item">
+              <input type="checkbox" id="sugar-sub" name="sugar-sub" value="slim" checked>
+              <label for="sugar-sub" class="form__field-label">Сахарозаменитель</label>
+            </li>
+
+            <li class="form__addition-item">
+              <input type="checkbox" id="water" name="water" value="water">
+              <label for="water" class="form__field-label">Питьевая вода</label>
+            </li>
+
+            <li class="form__addition-item">
+              <input type="checkbox" id="milk" name="milk" value="milk">
+              <label for="milk" class="form__field-label">Молоко</label>
+            </li>
+
+            <li class="form__addition-item">
+              <input type="checkbox" id="vitamins" name="vitamins" value="vitamins">
+              <label for="vitamins" class="form__field-label">Витамины</label>
+            </li>
+
+          </ul>
+        </fieldset>
+
+        <!-- Отправить форму -->
+        <div class="form__submit">
+          <input class="button button--green form__submit-button" type="submit" value="Отправить заявку">
+          <span class="form__notice"> * — Обязательные поля</span>
+        </div>
+      </form>
+    </section>
+
+
+
+    <!-- Конец формы -->
+
+
     <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__headline">Приглашаем <br>к сотрудничеству дилеров</h2>
@@ -52,58 +177,60 @@
       </div>
 
       <a href="map.html" class="contacts__map-link  contacts__map-image">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor"
+          width="100%" height="400" frameborder="0"></iframe>
 
 
       </a>
     </section>
   </main>
   <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
-        <ul class="page-footer__social social">
-          <li class="social__item"><a href="vk.com" class="social__link social__link--vk">
-              <svg width="22" height="12">
-                <use xlink:href="#icon-vk"></use>
-              </svg>
-              <span class="visually-hidden">Мы в Вконтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="instagram.com" class="social__link social__link--insta">
-              <svg width="17" height="17">
-                <use xlink:href="#icon-insta"></use>
-              </svg>
-              <span class="visually-hidden">Мы в Инстаграм</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="facebook.com" class="social__link social__link--facebook">
-              <svg width="10" height="19">
-                <use xlink:href="#icon-fb"></use>
-              </svg>
-              <span class="visually-hidden">Мы в Фейсбуке</span>
-            </a>
-          </li>
-        </ul>
-        <div class="page-footer__copyright copyright">
-          <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
-
+    <div class="page-footer__wrapper">
+      <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
+      <ul class="page-footer__social social">
+        <li class="social__item"><a href="vk.com" class="social__link social__link--vk">
+            <svg width="22" height="12">
+              <use xlink:href="#icon-vk"></use>
+            </svg>
+            <span class="visually-hidden">Мы в Вконтакте</span>
           </a>
+        </li>
+        <li class="social__item">
+          <a href="instagram.com" class="social__link social__link--insta">
+            <svg width="17" height="17">
+              <use xlink:href="#icon-insta"></use>
+            </svg>
+            <span class="visually-hidden">Мы в Инстаграм</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="facebook.com" class="social__link social__link--facebook">
+            <svg width="10" height="19">
+              <use xlink:href="#icon-fb"></use>
+            </svg>
+            <span class="visually-hidden">Мы в Фейсбуке</span>
+          </a>
+        </li>
+      </ul>
+      <div class="page-footer__copyright copyright">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
 
-          <svg width="27" height="34" viewBox="10 4 40 50">
-            <path fill="#2E368F"
-              d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z">
-            </path>
+        </a>
 
-          </svg>
+        <svg width="27" height="34" viewBox="10 4 40 50">
+          <path fill="#2E368F"
+            d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z">
+          </path>
+
+        </svg>
 
 
 
 
-        </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
   <script src="js/app.js"></script>
 </body>
