--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="preload" href="css/style.min.css" as="style">
   <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+  <script>
+      // Picture element HTML5 shiv
+      document.createElement("picture");
+    </script>
+    <script src="js/picturefill.min.js" async></script>
 
 
 </head>
