--- a/source/index.html
+++ b/source/index.html
@@ -242,7 +242,7 @@
   </footer>
 
   <script src="js/app.js"></script>
-  <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/1.1/index.xml"></script>
   <script src="js/ymaps.js"></script>
 </body>
 
