--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
 <body>
 
   <div style="display: none">
-    <include src="build/img/sprite.svg"></include>
+    <include src="build/img/sprite.svg"  style="display: none"></include>
   </div>
 
   <header class="page-header">
@@ -435,7 +435,7 @@
 
 
   <script src="js/app.js"></script>
-  <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/1.1/index.xml"></script>
   <script src="js/ymaps.js"></script>
 </body>
 
