--- a/source/form.html
+++ b/source/form.html
@@ -114,7 +114,7 @@
 
             <li class="form__row">
               <label for="cat-owner-phone" class="form__field-label">Телефон:*</label>
-              <input type="phone" id="cat-owner-phone" name="cat-owner-phone" placeholder="8 (960) 900-60-90" required>
+              <input type="tel" id="cat-owner-phone" name="cat-owner-phone" placeholder="8 (960) 900-60-90" required>
               <svg class="form__icon" width="21" height="21">
                 <use xlink:href="#icon-phone"></use>
               </svg>
@@ -238,7 +238,7 @@
 
   <script src="js/app.js"></script>
 
-  <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/1.1/index.xml"></script>
   <script src="js/ymaps.js"></script>
 
 </body>
